@@ -91,27 +91,3 @@ jobs:
           docker-compose up -d
           sleep 60
           docker-compose exec -T web sh -c "cd /var/www/html && vendor/bin/phpunit ./INTER-Mediator-UnitTest/INTERMediator_AllTests.php"
-
-  test-with-php55:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: docker-compose-run
-        shell: bash
-        run: |
-          cp .github/workflows/Dockerfile-for-php-5.5 Dockerfile
-          docker-compose up -d
-          sleep 60
-          docker-compose exec -T web sh -c "cd /var/www/html && vendor/bin/phpunit ./INTER-Mediator-UnitTest/INTERMediator_AllTests.php"
-
-  test-with-php54:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: docker-compose-run
-        shell: bash
-        run: |
-          cp .github/workflows/Dockerfile-for-php-5.4 Dockerfile
-          docker-compose up -d
-          sleep 60
-          docker-compose exec -T web sh -c "cd /var/www/html && vendor/bin/phpunit ./INTER-Mediator-UnitTest/INTERMediator_AllTests.php"
