@@ -13,6 +13,8 @@ Also the Migration Guide (Japanese) might be informative:
 Ver.5.13-dev (in development)
 - Support retrieving image files in container fields when using DB_FileMaker_DataAPI class, a separate web server and Claris FileMaker Server 19.3.1 or later.
 - Our CI operations moved to GitHub Actions from Travis CI.
+- [INFO] Drop support for PHP 5.4 and PHP 5.5.
+- [INFO] Drop support for FileMaker Server 14 and FileMaker Server 15.
 - [BUG FIX] If nodes bond to the local context exist in enclosure/repeater (ex. within table tag), Some error (1046)
   rose up. So far the error doesn't rise, but these nodes should exist out side of enclosure/repeater. (Thanks to Mr. Hayashi)
 - [BUG FIX] Fix GenerateJSCode.php to consider when "INTER-Mediator-Support" directory doesn't exist (Thanks to Tomomitsu Baba).
